crates/deadline-cli/tests/cli/snapshots/cli__farm__farm_get_api_failure_prints_error.snap
---
source: crates/deadline-cli/tests/cli/farm.rs
info:
  program: deadline
  args:
    - farm
    - get
    - "--farm-id"
    - farm-nonexistent
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61286"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61286"
    AWS_ENDPOINT_URL_STS: "http://localhost:61286"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmplKvrcf/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmplKvrcf
---
success: false
exit_code: 1
----- stdout -----
Failed to get Farm from Deadline:
ResourceNotFoundException: No message
Could not list available resources to suggest alternatives.
This may indicate your IAM policy is missing List permissions.

----- stderr -----
